# fullrank

./: .gitignore  README.md  bibliography.bib  fruits.json  fruits.txt  package.json  pyproject.toml  writeup.typ
app/: index.html  package.json
app/src/: App.svelte  app.scss
app/src/lib/: Landing.svelte  Rank.svelte  core.ts
src/: App.svelte  main.ts
src/fullrank/: __init__.py  __main__.py  comparison.py  comparison_tui.py  entropy_stats.py  posterior_stats.py  truncated_mvn.py
src/lib/: Landing.svelte  core.ts
thurston/: Cargo.toml
thurston/src/: dist.rs  lib.rs  stats.rs  trunc_mvn.rs
thurston/tests/: model.rs
