[package]
name = "thurston"
version = "0.1.0"
authors = ["Max Niederman <max@maxniederman.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
nalgebra = { version = "0.32.6", features = ["rand"] }
rand = "0.8.5"
rand_distr = "0.4.3"
argmin = { version = "0.10.0" }
argmin-math = { version = "0.4.0", features = ["nalgebra_v0_32"] }
statrs = "0.17.1"
ordered-float = "4.2.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "*", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
